--- a/plop-templates/services/index.ts.hbs
+++ b/plop-templates/services/index.ts.hbs
@@ -1,4 +1,4 @@
-import {} from './models/args.models'
+import {} from './models/params.models'
 import { apiCaller } from 'services/apiCaller'
 import { {{pascalCase name}}Urls } from './urls'
 import { } from './models'
