--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,10 @@ a:hover {
   overflow: hidden;
 }
 
+.layout {
+  min-height: calc(100vh - 118px);
+}
+
 .navbar {
   flex: 0.2;
   background-color: rgb(0, 21, 41);
